--- a/index.html
+++ b/index.html
@@ -5,47 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Stats preview card component</title>
   <link rel="stylesheet" href="style.css">
   
+  <title>Frontend Mentor | Stats preview card component</title>
+   
 </head>
 <body>
-  
-    <div class="container">
-      <div class="content">
-         <h1>
-          Get <span>insights</span>that help your business grow.
-        </h1>
-          <p>
-          Discover the benefits of data analytics and make better <br>
-          decisions regarding revenue, customer <br>
-          experience, and overall efficiency. </p>
-        <div class="work-info">
-          <div class="company">
-          <h3>
-            10k+
-          </h3>
-            <p>
-              COMPANIES
-            </p>
-          </div>
-          <div class="temp">
-            <h3>
-              314
-            </h3>
-            <p>TEMPLATES</p>
-          </div>
-          <div class="queries">
-            <h3>12m+</h3>
-            <p>QUERIES</p>
-          </div>
-        </div> 
-       <div class="img">
-        <img src="images/image-header-desktop.jpg" alt=""> 
-       </div>
-      </div>
+  <main>
+    <div class="image">
     </div>
-  
+    <section>
+      <div class="text">
+        <h1>Get <span>insights</span> that help your business grow.</h1>
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+          experience, and overall efficiency.</p>
+      </div>
+      
+      <div class="result">
+        <div>
+          <p>10k+</p>
+          <h2>companies</h2>
+        </div>
+        <div>
+          <p>314</p>
+          <h2>templates</h2>
+        </div>
+        <div>
+          <p>12M+</p>
+          <h2 class="queries">queries</h2>
+        </div>
+      </div>
+    </section>
+  </main>
+
 </body>
 </html>
